# metkit

./: .git-blame-ignore-revs  .gitignore  AUTHORS  CMakeLists.txt  NOTICE  README.md  VERSION.cmake  compile_commands.json  marskit.sublime-project  marskit_config.h.in  metkit-import.cmake.in  metkit.sublime-project  pyproject.toml
metkit/odb/: CMakeLists.txt  class.table  group.txt
rust/: Cargo.toml
rust/crates/metkit-sys/: Cargo.toml  README.md  build.rs
share/metkit/: .gitignore  CMakeLists.txt  axis.yaml  bufr-subtypes.yaml  build-paramids.py  check-params-yaml.py  chemids.yaml  compare.py  convert-language.py  fieldsdb-esuite.py  fieldsdb.py  fieldsdb.yaml  language.json  language.yaml  list.py  make-chemids-yaml.py  make-paramids-yaml-esuite.py  make-paramids-yaml.py  make-params-yaml-esuite.py  make-params-yaml-from-fields-catalogue.py  make-params-yaml.py  make-params.py  make-yaml.py  modifiers.yaml  obstype.yaml  odb.py  param-matching.yaml  param-table_expansion.yaml  param.json  param.yaml  parameter_entry_schema.json  parameter_metadata.yaml  paramid.py  paramids.yaml  params-static.yaml  params.yaml  params_prod_0001.yaml  params_prod_0078.yaml  prodgen-paramids.yaml  prodgen-params-extra.yaml  (+6 more)
share/metkit/mars2grib/: CMakeLists.txt  GeneratePDTRule.py  GenerateTimeDescriptionRule.py  RuleList.yaml  generic-yaml-rule-example.yaml  infer-type-of-level.yaml  make-statistical-paramids-yaml.py  statistical-paramids.yaml
share/metkit/odb/: CMakeLists.txt  class.table  group.txt  marsrequest.yaml  stream.table  type.table
src/marskit/: BaseProtocol.cc  BaseProtocol.h  CMakeLists.txt  Client.cc  Client.h  ClientTask.cc  ClientTask.h  DHSProtocol.cc  DHSProtocol.h  GribToRequest.cc  GribToRequest.h  MarsHandle.cc  MarsHandle.h  MarsHandleFactory.cc  MarsHandleFactory.h  MarsLocation.cc  MarsLocation.h  MarsRequest.cc  MarsRequest.h  MarsRequestHandle.cc  MarsRequestHandle.h  RequestEnvironment.cc  RequestEnvironment.h  marskit_config.h.in
src/metkit/: BaseProtocol.cc  BaseProtocol.h  CMakeLists.txt  ClientTask.cc  ClientTask.h  DHSProtocol.cc  DHSProtocol.h  GribToRequest.cc  MarsExpandContext.cc  MarsExpandContext.h  MarsExpension.cc  MarsExpension.h  MarsHandle.cc  MarsHandle.h  MarsLanguage.cc  MarsLanguage.h  MarsLocation.cc  MarsLocation.h  MarsParsedRequest.cc  MarsParsedRequest.h  MarsParser.cc  MarsParser.h  MarsParserContext.cc  MarsParserContext.h  MarsRequest.cc  MarsRequest.h  MarsRequestHandle.cc  MarsRequestHandle.h  MetkitTool.cc  Param.cc  Param.h  ParamID.cc  ParamID.h  Parameter.cc  Parameter.h  RequestEnvironment.cc  RequestEnvironment.h  StepRange.cc  StepRange.h  StepRangeNormalise.h  (+9 more)
src/metkit/api/: metkit_c.cc  metkit_c.h
src/metkit/bufr/: BufrHandle.cc  BufrHandle.h  BufrToRequest.cc  BufrToRequest.h
src/metkit/codes/: BUDGDecoder.cc  BUDGDecoder.h  BUFRDecoder.cc  BUFRDecoder.h  BufrContent.cc  BufrContent.h  CodesContent.cc  CodesContent.h  CodesDataContent.cc  CodesDataContent.h  CodesDecoder.h  CodesHandleDeleter.h  CodesSplitter.cc  CodesSplitter.h  DataContent.cc  DataContent.h  Decoder.cc  Decoder.h  GRIBDecoder.cc  GRIBDecoder.h  GribAccessor.cc  GribAccessor.h  GribHandle.cc  GribHandle.h  GribIterator.cc  GribIterator.h  LibEccodes.cc  LibEccodes.h  MallocCodesContent.cc  MallocCodesContent.h  MallocDataContent.cc  MallocDataContent.h  Message.cc  Message.h  MessageContent.cc  MessageContent.h  OdbContent.cc  (+15 more)
src/tests/: CMakeLists.txt  test_emosfile.cc  test_expand.cc  test_hypercube.cc  test_multihandle.cc  test_param_axis.cc  test_steprange_axis.cc  test_time.cc  test_typesfactory.cc
src/tools/: CMakeLists.txt  bufr-sanity-check.cc  bufr-to-mars-request.cc  check-mars2conf.cc  client_cli.cc  compare-mars-requests.py  geo_reproducer.cc  grib-blob.cc  grib-jump.cc  grib-to-mars-request.cc  grib-to-request.cc  grib2request.cc  mars-archive-script.cc  message-to-mars.cc  nccompare.py  ncmerge.cc  odb-to-request.cc  parse-mars-request.cc  pointdb-nearest-point.cc  read-bufr.cc
tests/: CMakeLists.txt  pl.grib  sol.grib  test_c_api.c  test_c_api.cc  test_codes_api.cc  test_codes_decoder.cc  test_context.cc  test_date.cc  test_expand.cc  test_filter.cc  test_gribhandle.cc  test_hypercube.cc  test_integer_range.cc  test_language.cc  test_mars.py  test_mars_language.cc  test_mars_language_strict.cc  test_matcher.cc  test_metkit.py  test_multihandle.cc  test_obstype.cc  test_odbsplitter.cc  test_param_axis.cc  test_request.cc  test_step.cc  test_steprange_axis.cc  test_time.cc  test_type_levelist.cc  test_typesfactory.cc
tests/expand/: MARSC-223.expected  MARSC-223.req  MARSC-224.expected  MARSC-224.req  MARSC-225.expected  MARSC-225.req  MARSC-227.expected  MARSC-227.req  MARSC-228.expected  MARSC-228.re  MARSC-231.expected  MARSC-231.req  MARSC-232.expected  MARSC-232.req  MARSC-233 copy.expected  MARSC-233.expected  MARSC-233.req  MARSC-234.expected  MARSC-234.req  MARSC-236.expected  MARSC-236.req  MARSC-237.expected  MARSC-237.re  MARSC-240.expected  MARSC-240.req  MARSC-241.expected  MARSC-241.req  MARSC-242.expected  MARSC-242.req  MARSC-244.expected  MARSC-244.re  MARSC-244.req  MARSC-245.expected  MARSC-245.req  MARSC-247.expected  MARSC-247.req  MARSC-248.expected  MARSC-248.req  MARSC-249.expected  MARSC-249.req  (+26 more)
tests/gribjump/: CMakeLists.txt  const.grib  no_mask.grib  sl_mask.grib  synth12.grib  test_gribjump.cc
tests/mars2grib/: CMakeLists.txt  test_pdt_selection.cc  test_statparam_only.cc
tests/marsgen/: CMakeLists.txt  genfile  genfile.default  genfile.legacy  metkit_marsgen_compare.sh.in  metkit_marsgen_legacy.sh.in  metkit_marsgen_obs.sh.in  metkit_marsgen_simple.sh.in
tests/netcdf/: CMakeLists.txt  attribute_merge.sh  bounds_merge_1.sh  complex_two_way_merge.sh  coordinates_overlap_merge_1.sh  coordinates_overlap_merge_3.sh  signature_merge_2.sh  simple_three_way_merge.sh  two_way_merge_with_dimension_rename.sh  two_way_merge_with_dimensions_swap.sh  variable_merge_3.sh  variable_merge_5.sh
tests/regressions/: CMakeLists.txt
tests/tools/: CMakeLists.txt  d1.grib  grib-to-request.sh.in
(+1071 files in other folders)
